--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html {
   font-family: Georgia, serif;
   background-color: #f2f1ed;
   font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 img {
@@ -11,20 +12,21 @@ img {
 h2 {
   font-family: Georgia, serif;
   color: #5d8432;
-  font-size: 5rem;
+  font-size: 2rem;
 }
 
 figcaption {
   font-family: Georgia, serif;
   font-style: italic;
   text-align: center;
-  font-size: 1rem;
+  font-size: .5rem;
 }
 
 li {
   color: #793284;
   font-style: oblique;
   font-size: 1.125rem;
+  font-family: "Patua One", serif;
 }
 
 li a:hover {
