--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ img {
 }
 
 h2 {
-  font-family: Georgia, serif;
+  font-family: "Patua One", serif;
   color: #5d8432;
   font-size: 2rem;
 }
@@ -26,8 +26,15 @@ a,
 a:link {
   color: #793284;
   font-family: "Patua One", serif;
+  text-decoration: none;
 }
 
 a:hover {
   color: #b42885;
+}
+
+ol {
+  list-style-type: none;
+  font-size: 1.125rem;
+  font-weight: bold;
 }
